# databricks-academy

./: README.md
lab-3/: databricks.yml  pyproject.toml
lab-3/landing_local/orders/batch_001/: order_details_0002.csv  order_details_0010.csv  order_details_0013.csv  order_details_0023.csv  order_details_0024.csv  order_details_0029.csv  order_details_0037.csv  order_details_0039.csv  order_details_0040.csv  order_details_0044.csv  order_details_0045.csv  order_details_0049.csv  order_details_0055.csv  order_details_0058.csv  order_details_0059.csv  order_details_0061.csv  order_details_0063.csv  order_details_0070.csv  order_details_0079.csv  order_details_0081.csv  order_details_0082.csv  order_details_0088.csv  order_details_0092.csv  order_details_0096.csv
lab-3/landing_local/orders/batch_002/: order_details_0104.csv  order_details_0113.csv  order_details_0114.csv  order_details_0116.csv  order_details_0117.csv  order_details_0129.csv  order_details_0131.csv  order_details_0133.csv  order_details_0135.csv  order_details_0136.csv  order_details_0145.csv  order_details_0151.csv  order_details_0154.csv  order_details_0155.csv  order_details_0157.csv  order_details_0159.csv  order_details_0162.csv  order_details_0165.csv  order_details_0166.csv  order_details_0181.csv  order_details_0183.csv  order_details_0189.csv  order_details_0198.csv
lab-3/landing_local/orders/batch_003/: order_details_0201.csv  order_details_0203.csv  order_details_0209.csv  order_details_0210.csv  (+21 more)
lab-3/src/ingestion/: generate_new_batch.py  generate_schema_change_batch.py  upload_to_azure.py
(+978 files in other folders)
