[project]
name = "retail_streaming_platform"
version = "0.0.1"
authors = [{ name = "yanquiel.arango@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.30.0",
    "azure-storage-file-datalake>=12.25.0",
    "ipykernel>=7.3.0",
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "pyspark>=4.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
